--- a/render.yaml
+++ b/render.yaml
@@ -1,16 +1,13 @@
 services:
   - type: web
     name: cwl-war-council
-    env: node
+    runtime: node
     buildCommand: npm install && npm run build
     startCommand: npm start
+    plan: free
+    env: node
     envVars:
       - key: NODE_ENV
         value: production
-      - key: NEXTAUTH_URL
-        fromService:
-          type: web
-          name: cwl-war-council
-          property: host
     domains:
       - clashwarcouncil.com 
